bluejay-parser/tests/snapshots/executable_document_integration_test__error@empty_arguments.graphql.snap
---
source: bluejay-parser/tests/executable_document_integration_test.rs
expression: formatted_errors
input_file: bluejay-parser/tests/test_data/executable_document/error/empty_arguments.graphql
---
Error: Parse error
   ╭─[<unknown>:2:9]
   │
 2 │   field()
   │         ┬  
   │         ╰── Expected a name
───╯

